Fix margin for collapsed lines bar on admin submissions diff page

--- a/app/styles/pages/course-admin-submission-diff.scss
+++ b/app/styles/pages/course-admin-submission-diff.scss
@@ -1,7 +1,3 @@
-.course-admin-submission-diff-container {
-  code-mirror {
-    .cm-collapsedLines {
-      margin-left: -24px;
-    }
-  }
+.course-admin-submission-diff-container code-mirror .cm-collapsedLines {
+  margin-left: -24px;
 }
